# AStarFootstepPlanner

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  FootstepPlanner.cmake.in  README.md  README_CN.md  lessons.md
.agent-rules/: CLAUDE.md  WORKFLOW-RULES.md
.github/workflows/: ci.yml
demo/: body_path.csv  demo_export.cpp  demo_flat.cpp  demo_flat.py  demo_obstacle.cpp  demo_stairs.cpp  demo_visualize.py  foot_polygons.csv  footsteps.csv  make_gif.py  obstacle.csv  start_goal.csv  terrain_0.csv  terrain_1.csv  terrain_10.csv  terrain_11.csv  terrain_12.csv  terrain_2.csv  terrain_3.csv  terrain_4.csv  terrain_5.csv  terrain_6.csv  terrain_7.csv  terrain_8.csv  terrain_9.csv  terrain_heights.csv
include/FootstepPlannerLJH/: AStarFootstepPlanner.h  AStarSearch.h  Block.h  DataType.h  EnumDef.h  FootstepplannerBasic.h  GraphIHMC.h  Title.h  parameters.h
include/FootstepPlannerLJH/Block/: Block.h
include/FootstepPlannerLJH/PlotCheck/: FootPolygon.h  PlotChecker.h
include/FootstepPlannerLJH/SimpleBodyPathPlanner/: simple2DBodyPathHolder.h
include/FootstepPlannerLJH/StepCheck/: FootstepPlannerCompletionChecker.h
include/FootstepPlannerLJH/StepConstraints/: StepConstraintCheck.h
include/FootstepPlannerLJH/StepCost/: FootstepCostCalculator.h  HeuristicCalculator.h
include/FootstepPlannerLJH/StepExpansion/: IdealStepCalculator.h  ParameterBasedStepExpansion.h  PartialExpansionManager.h
src/FootstepPlannerLJH/: AStarFootstepPlanner.cpp  Block.cpp  FootstepPlannerBasic.cpp  parameters.cpp
src/FootstepPlannerLJH/Block/: Block.cpp
src/FootstepPlannerLJH/PlotCheck/: FootPolygon.cpp  PlotChecker.cpp
src/FootstepPlannerLJH/SimpleBodyPathPlanner/: simple2DBodyPathHolder.cpp
src/FootstepPlannerLJH/StepCheck/: FootstepCompletionChecker.cpp
src/FootstepPlannerLJH/StepConstraints/: StepConstraintCheck.cpp
src/FootstepPlannerLJH/StepCost/: FootstepCostCalculator.cpp  HeuristicCalculator.cpp
src/FootstepPlannerLJH/StepExpansion/: ParameterBasedStepExpansion.cpp  PartialExpansionManager.cpp
test/: CMakeLists.txt  test.cpp  testBlock.cpp
